addressed by comments